--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -9,9 +9,9 @@
 <body>
     <section class="top-bar">
         <div class="logo">
-            <img src="" alt="logo-sequence">
+            <img src="images/logo_Text.png" alt="logo-sequence">
         </div>
-        <nav class="menu">
+        <nav class="top-menu">
             <a href="#">Project</a>
             <a href="#">Announcement</a>
             <a href="#">archive</a>
