--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -23,20 +23,19 @@
     </section>
     <section class="main-background">
         <div class="main-text-image-1">
-            <img src="" alt="s">
+            <img src="images/Vector.png" alt="s">
         </div>
         <div class="main-text-image-2">
-            <img src="" alt="equence">
+            <img src="images/equence.png" alt="equence">
         </div>
         <div class="background-image">
-            <img src="" alt="running-two-mans">
+            <img src="images/marie-claude-vergne.png" alt="running-two-mans">
         </div>
         <div class="main-text">
             <h1>새로운 이야기를 만들다. 시퀀스</h1>
         </div>
         <div class="main-bottom-btn">
-            <a href="#">프로젝트 올리고 새로운 이야기를 만들어보세요!</a>
-            <img src="" alt="right-arrow">
+            <img src="" alt="btn">
         </div> 
     </section>
     <section class="section-about">
