--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -10,16 +10,16 @@
 <body>
     <section class="top-bar">
         <div class="logo">
-            <img src="images/logo_Text.png" alt="logo-sequence">
+            <img src="" alt="logo-sequence">
         </div>
         <nav class="top-menu">
             <a href="#">Project</a>
             <a href="#">Announcement</a>
             <a href="#">archive</a>
+            <div class="login-btn">
+                <a href="#">Log In</a>
+            </div>
         </nav>
-        <div class="login-btn">
-            <a href="#">Log In</a>
-        </div>
     </section>
     <section class="main-background">
         <div class="main-text-image-1">
