--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="top-bar">
         <div class="logo">
-            <img src="" alt="logo-sequence">
+            <img src="images/logo_Text.png" alt="logo-sequence">
         </div>
         <nav class="top-menu">
             <a href="#">Project</a>
@@ -35,19 +35,19 @@
             <h1>새로운 이야기를 만들다. 시퀀스</h1>
         </div>
         <div class="main-bottom-btn">
-            <img src="" alt="btn">
+            <img src="images/primary.png" alt="btn">
         </div> 
     </section>
     <section class="section-about">
         <h2 class="about-title">About</h2>
         <div class="images-1">
-            <img src="" alt="필름 사진">
+            <img src="images/pexels-dmitry-demidov-515774-3921000.png" alt="필름 사진">
         </div>
         <div class="images-2">
-            <img src="" alt="카메라">
+            <img src="images/pexels-brunomassao-2335049.png" alt="카메라">
         </div>
         <div class="images-3">
-            <img src="" alt="shape">
+            <img src="images/Group 7.png" alt="shape">
         </div>
         <div class="about-text-1">
             <p>시퀀스는 IT 서비스 개발을 원하는<br>개발, 디자인 부문의 대학생들이 모여<br>함께 프로젝트를 진행하는 공간입니다.</p>
@@ -60,10 +60,10 @@
         <h2 class="benefit-title">Benefit</h2>
         <div class="position-1">
             <div class="benefit-image-1">
-                <img src="" alt="">
+                <img src="images/Frame 55.png" alt="1">
             </div>
             <div class="benefit-shape">
-                <img src="" alt="모양">
+                <img src="images/Group 11.png" alt="모양">
             </div>
             <div class="benefit-text">
                 <h2>개발자와 디자이너의 만남</h2>
@@ -72,10 +72,10 @@
         </div>
         <div class="position-2">
             <div class="benefit-image-2">
-                <img src="" alt="">
+                <img src="images/Frame 56.png" alt="2">
             </div>
             <div class="benefit-shape">
-                <img src="" alt="모양">
+                <img src="images/Group 11.png" alt="모양">
             </div>
             <div class="benefit-text">
                 <h2>실제 서비스를 세상에</h2>
@@ -84,10 +84,10 @@
         </div>
         <div class="position-3">
             <div class="benefit-image-3">
-                <img src="" alt="">
+                <img src="images/Frame 57.png" alt="3">
             </div>
             <div class="benefit-shape">
-                <img src="" alt="모양">
+                <img src="images/Group 11.png" alt="모양">
             </div>
             <div class="benefit-text">
                 <h2>실무에서 필요한 협업 경험</h2>
@@ -98,7 +98,7 @@
     <section class="section-partner">
         <h2 class="partner-title">Partner</h2>
         <div class="partner-image">
-            <img src="" alt="동물">
+            <img src="images/Group 12.png" alt="동물">
         </div>
         <h1 class="partner-text-1">Underdog Revolution</h1>
         <div class="partner-text-2">
