--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -143,7 +143,7 @@
     </section>
     <section class="footer">
         <div class="footer-image">
-            <img src="" alt="s">
+            <img src="images/Vector-2.png" alt="s">
         </div>
         <div class="footer-text-box">새로운 시퀀스를 만들어보세요!</div>
     </section>
