--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -22,11 +22,13 @@
         </nav>
     </section>
     <section class="main-background">
-        <div class="main-text-image-1">
-            <img src="images/Vector.png" alt="s">
-        </div>
-        <div class="main-text-image-2">
-            <img src="images/equence.png" alt="equence">
+        <div class="main-text-images">
+            <div class="main-text-image-1">
+                <img src="images/Vector.png" alt="s">
+            </div>
+            <div class="main-text-image-2">
+                <img src="images/equence.png" alt="equence">
+            </div>
         </div>
         <div class="background-image">
             <img src="images/marie-claude-vergne.png" alt="running-two-mans">
