--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -34,7 +34,7 @@
             <img src="images/marie-claude-vergne.png" alt="running-two-mans">
         </div>
         <div class="main-text">
-            <h1>새로운 이야기를 만들다. 시퀀스</h1>
+            <p>새로운 이야기를 만들다. 시퀀스</p>
         </div>
         <div class="main-bottom-btn">
             <img src="images/primary.png" alt="btn">
