--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -68,7 +68,7 @@
                 <img src="images/Group 11.png" alt="모양">
             </div>
             <div class="benefit-text">
-                <h2>개발자와 디자이너의 만남</h2>
+                <h3>개발자와 디자이너의 만남</h3>
                 <p>각기 다른 분야의 대학생들이 모여<br>협업할 수 있는 프로젝트를 시작합니다.</p>
             </div>
         </div>
@@ -80,7 +80,7 @@
                 <img src="images/Group 11.png" alt="모양">
             </div>
             <div class="benefit-text">
-                <h2>실제 서비스를 세상에</h2>
+                <h3>실제 서비스를 세상에</h3>
                 <p>여러분이 만든 웹/앱 서비스가 실제로 세상에 출시되어<br>사용자들의 피드백을 받을 수 있는 경험을 제공합니다.</p>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 <img src="images/Group 11.png" alt="모양">
             </div>
             <div class="benefit-text">
-                <h2>실무에서 필요한 협업 경험</h2>
+                <h3>실무에서 필요한 협업 경험</h3>
                 <p>대학생들이 다양한 직무와 협업하며<br>실무에서 요구되는 경험을 쌓을 수 있습니다.</p>
             </div>
         </div>
@@ -117,27 +117,27 @@
             <div class="experience-container" id="scroll-container">
                 <div class="experience-item">
                     <div class="image-box"></div>
-                    <h2>DANJAM</h2>
+                    <h4>DANJAM</h4>
                     <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
                 </div>
                 <div class="experience-item">
                     <div class="image-box"></div>
-                    <h2>DANJAM</h2>
+                    <h4>DANJAM</h4>
                     <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
                 </div>
                 <div class="experience-item">
                     <div class="image-box"></div>
-                    <h2>DANJAM</h2>
+                    <h4>DANJAM</h4>
                     <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
                 </div>
                 <div class="experience-item">
                     <div class="image-box"></div>
-                    <h2>DANJAM</h2>
+                    <h4>DANJAM</h4>
                     <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
                 </div>
                 <div class="experience-item">
                     <div class="image-box"></div>
-                    <h2>DANJAM</h2>
+                    <h4>DANJAM</h4>
                     <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
                 </div>
             </div>
@@ -147,7 +147,9 @@
         <div class="footer-image">
             <img src="images/Vector-2.png" alt="s">
         </div>
-        <div class="footer-text-box">새로운 시퀀스를 만들어보세요!</div>
+        <div class="footer-text-box">
+            <p>새로운 시퀀스를 만들어보세요!</p>
+        </div>
     </section>
     <section class="section-who-made">
         <h2 class="who-made-title">Who Made</h2>
