--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="top-bar">
@@ -21,6 +22,7 @@
             </div>
         </nav>
     </section>
+    
     <section class="main-background">
         <div class="main-text-images">
             <div class="main-text-image-1">
@@ -40,16 +42,17 @@
             <img src="images/primary.png" alt="btn">
         </div> 
     </section>
+    
     <section class="section-about">
         <h2 class="about-title">About</h2>
-        <div class="images-1">
-            <img src="images/pexels-dmitry-demidov-515774-3921000.png" alt="필름 사진">
+        <div class="about-images-1">
+            <img src="images/pexels-dmitry-demidov-515774-3921000.png" alt="필름 사진" style="width:760px; height:489px;" />
         </div>
-        <div class="images-2">
-            <img src="images/pexels-brunomassao-2335049.png" alt="카메라">
+        <div class="about-images-2">
+            <img src="images/pexels-brunomassao-2335049.png" alt="카메라" style="width:755px; height: 489px;" />
         </div>
-        <div class="images-3">
-            <img src="images/Group 7.png" alt="shape">
+        <div class="about-images-3">
+            <img src="images/Group 7.png" alt="shape" style="width:804px; height:850px;" />
         </div>
         <div class="about-text-1">
             <p>시퀀스는 IT 서비스 개발을 원하는<br>개발, 디자인 부문의 대학생들이 모여<br>함께 프로젝트를 진행하는 공간입니다.</p>
@@ -58,6 +61,7 @@
             <p>영화의 주제와 인물들을 소개하는 시퀀스처럼,<br>우리의 만남과 협업이 하나의 영화와 같이<br>새로운 이야기를 만들어내는 것을<br>목표로 하고 있습니다.</p>
         </div>
     </section>
+
     <section class="section-benefit">
         <h2 class="benefit-title">Benefit</h2>
         <div class="position-1">
@@ -67,7 +71,7 @@
             <div class="benefit-shape">
                 <img src="images/Group 11.png" alt="모양">
             </div>
-            <div class="benefit-text">
+            <div class="benefit-text-1">
                 <h3>개발자와 디자이너의 만남</h3>
                 <p>각기 다른 분야의 대학생들이 모여<br>협업할 수 있는 프로젝트를 시작합니다.</p>
             </div>
@@ -79,7 +83,7 @@
             <div class="benefit-shape">
                 <img src="images/Group 11.png" alt="모양">
             </div>
-            <div class="benefit-text">
+            <div class="benefit-text-2">
                 <h3>실제 서비스를 세상에</h3>
                 <p>여러분이 만든 웹/앱 서비스가 실제로 세상에 출시되어<br>사용자들의 피드백을 받을 수 있는 경험을 제공합니다.</p>
             </div>
@@ -91,26 +95,32 @@
             <div class="benefit-shape">
                 <img src="images/Group 11.png" alt="모양">
             </div>
-            <div class="benefit-text">
+            <div class="benefit-text-3">
                 <h3>실무에서 필요한 협업 경험</h3>
                 <p>대학생들이 다양한 직무와 협업하며<br>실무에서 요구되는 경험을 쌓을 수 있습니다.</p>
             </div>
         </div>
     </section>
+
     <section class="section-partner">
         <h2 class="partner-title">Partner</h2>
-        <div class="partner-image">
-            <img src="images/Group 12.png" alt="동물">
-        </div>
-        <h1 class="partner-text-1">Underdog Revolution</h1>
-        <div class="partner-text-2">
-            <p>세종시 청년 개발자들이 모인 언더독 레볼루션은<br>
-               청년들의 IT기반 스타트업 생태계를 만들어가자는 목표를 가지고 있습니다.<br>
-               청년들의 활발한 청년창업이 진정한 의미의 실리콘 밸리의 시작이라 정의하고<br>
-               청년창업 활성화를 위한 다양한 활동을 전개합니다.
-            </p>
+        <div class="partner-things">
+            <div class="partner-image">
+                <img src="images/Group 12.png" alt="동물">
+            </div>
+            <div class="partner-text-1">
+                <h1>Underdog Revolution</h1>
+            </div>
+            <div class="partner-text-2">
+                <p>세종시 청년 개발자들이 모인 언더독 레볼루션은<br>
+                   청년들의 IT기반 스타트업 생태계를 만들어가자는 목표를 가지고 있습니다.<br>
+                   청년들의 활발한 청년창업이 진정한 의미의 실리콘 밸리의 시작이라 정의하고<br>
+                   청년창업 활성화를 위한 다양한 활동을 전개합니다.
+                </p>
+            </div>
         </div>
     </section>
+
     <section class="section-experience">
         <h2 class="experience-title">Experience</h2>
         <div class="experience-wrapper">
@@ -118,41 +128,45 @@
                 <div class="experience-item">
                     <div class="image-box"></div>
                     <h4>DANJAM</h4>
-                    <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
+                    <p>기숙사생을 위한 메이트 매칭 및<br>동네 커뮤니티 서비스</p>
                 </div>
                 <div class="experience-item">
                     <div class="image-box"></div>
                     <h4>DANJAM</h4>
-                    <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
+                    <p>기숙사생을 위한 메이트 매칭 및<br>동네 커뮤니티 서비스</p>
                 </div>
                 <div class="experience-item">
                     <div class="image-box"></div>
                     <h4>DANJAM</h4>
-                    <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
+                    <p>기숙사생을 위한 메이트 매칭 및<br>동네 커뮤니티 서비스</p>
                 </div>
                 <div class="experience-item">
                     <div class="image-box"></div>
                     <h4>DANJAM</h4>
-                    <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
+                    <p>기숙사생을 위한 메이트 매칭 및<br>동네 커뮤니티 서비스</p>
                 </div>
                 <div class="experience-item">
                     <div class="image-box"></div>
                     <h4>DANJAM</h4>
-                    <p>기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스</p>
+                    <p>기숙사생을 위한 메이트 매칭 및<br>동네 커뮤니티 서비스</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="footer">
+
+    <section class="section-footer">
         <div class="footer-image">
-            <img src="images/Vector-2.png" alt="s">
+            <img src="images/Vector-2.png" alt="s" style="width:131px; height:329px;" />
         </div>
         <div class="footer-text-box">
             <p>새로운 시퀀스를 만들어보세요!</p>
         </div>
     </section>
+
     <section class="section-who-made">
-        <h2 class="who-made-title">Who Made</h2>
+        <div class="who-made-title">
+            <h2>Who Made</h2>
+        </div>
         <div class="teams">
             <div class="team">
                 <h3 class="team-title">Design Team</h3>
