--- a/윤서보경팀/3차과제/윤서/project/index.html
+++ b/윤서보경팀/3차과제/윤서/project/index.html
@@ -150,6 +150,16 @@
                     <h4>DANJAM</h4>
                     <p>기숙사생을 위한 메이트 매칭 및<br>동네 커뮤니티 서비스</p>
                 </div>
+                <div class="experience-item">
+                    <div class="image-box"></div>
+                    <h4>DANJAM</h4>
+                    <p>기숙사생을 위한 메이트 매칭 및<br>동네 커뮤니티 서비스</p>
+                </div>
+                <div class="experience-item">
+                    <div class="image-box"></div>
+                    <h4>DANJAM</h4>
+                    <p>기숙사생을 위한 메이트 매칭 및<br>동네 커뮤니티 서비스</p>
+                </div>
             </div>
         </div>
     </section>
