--- a/윤서보경팀/3차과제/윤서/project/test.html
+++ b/윤서보경팀/3차과제/윤서/project/test.html
@@ -6,7 +6,7 @@
     <title>Sequence Landing Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link href="test.css" rel="stylesheet">
+    <link href="style2.css" rel="stylesheet">
 </head>
 <body>
     <!-- Top Navigation Bar -->
