--- a/윤서보경팀/3차과제/윤서/project/index2.html
+++ b/윤서보경팀/3차과제/윤서/project/index2.html
@@ -72,7 +72,7 @@
             <div class="benefit-shape">
                 <img src="images/Group 11.png" alt="모양">
             </div>
-            <div id="benefit-text1">
+            <div class="benefit-text">
                 <h3>개발자와 디자이너의 만남</h3>
                 <p>각기 다른 분야의 대학생들이 모여<br>협업할 수 있는 프로젝트를 시작합니다.</p>
             </div>
@@ -84,7 +84,7 @@
             <div class="benefit-shape">
                 <img src="images/Group 11.png" alt="모양">
             </div>
-            <div id="benefit-text2">
+            <div class="benefit-text">
                 <h3>실제 서비스를 세상에</h3>
                 <p>여러분이 만든 웹/앱 서비스가 실제로 세상에 출시되어<br>사용자들의 피드백을 받을 수 있는 경험을 제공합니다.</p>
             </div>
@@ -96,7 +96,7 @@
             <div class="benefit-shape">
                 <img src="images/Group 11.png" alt="모양">
             </div>
-            <div id="benefit-text3">
+            <div class="benefit-text">
                 <h3>실무에서 필요한 협업 경험</h3>
                 <p>대학생들이 다양한 직무와 협업하며<br>실무에서 요구되는 경험을 쌓을 수 있습니다.</p>
             </div>
