--- a/윤서보경팀/3차과제/윤서/project/test.html
+++ b/윤서보경팀/3차과제/윤서/project/test.html
@@ -129,9 +129,131 @@
             <div class="experience-title">Experience</div>
         </div>
         <div class="experience-content">
-            <div class="experience-scroll-slider">
+            <div class="slick-slider">
                 <div class="slider-list">
-                    <div class="list-box"></div>
+                    <div class="slick-track" style="width: 16044px; opacity: 1; transform: translate3d(-2292px, 0px, 0px); transition: -webkit-transform 3000ms linear;">
+                        <div data-index="-4" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="-3" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="-2" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="-1" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="0" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="1" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="2" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="3" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="4" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+
+                        <div data-index="5" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="6" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="7" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="8" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="9" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="10" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="11" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="12" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="13" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="14" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="15" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="16" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="17" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="18" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                        <div data-index="19" class="slick-slide slick-cloned" aria-hidden="true" style="width:764px;">
+                            <div class="box"></div>
+                            <h3 class="box-title">DANJAM </h3>
+                            <p class="box-p">기숙사생을 위한 메이트 매칭 및 동네 커뮤니티 서비스 </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </body>
