header부분 dropdown 수정하는중

--- a/윤서보경팀/3차과제/윤서/project/test copy.html
+++ b/윤서보경팀/3차과제/윤서/project/test copy.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sequence</title>
-    <link rel="icon" href="images/Group 11.png">
+    <title>Sequence Landing Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <link href="test.css" rel="stylesheet">
@@ -19,21 +18,17 @@
             </div>
         </div>
         <div class="header-bottom">
-            <div class="header-menu">
-                <div class="header-right">
-                    <div class="header-right-left">
-                        <button class="header-right-upper1">Announcement</button>
-                        <button class="header-right-upper1">Info.</button>
-                    </div>
-                    <div class="header-right-right">
-                        <button class="header-right-upper2">Archive</button>
-                        <button class="header-right-upper2">Login</button>
-                    </div>
-                </div>
-                <div class="header-left">
-                    <button class="header-left-upper"></button>
-                </div>
-            </div>
+            <ul class="header-menu">
+                <li>
+                    <a href="#"></a>
+                    <ul>
+                        <li><a href="#">Announcement</a></li>
+                        <li><a href="#">Info.</a></li>
+                        <li><a href="#">Archive</a></li>
+                        <li><a href="#">Login</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div class="blank1" style="height:150px;"></div>
         <div class="main-section">
