header-hover 해결

--- a/윤서보경팀/3차과제/윤서/project/test.html
+++ b/윤서보경팀/3차과제/윤서/project/test.html
@@ -30,9 +30,9 @@
                         <button class="header-right-upper2">Login</button>
                     </div>
                 </div>
-                <div class="header-left">
+                <!--<div class="header-left">
                     <button class="header-left-upper"></button>
-                </div>
+                </div>-->
             </div>
         </div>
         <div class="blank1" style="height:150px;"></div>
