--- a/윤서보경팀/3차과제/윤서/project/loginPage.html
+++ b/윤서보경팀/3차과제/윤서/project/loginPage.html
@@ -1,15 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sequence</title>
+    <link rel="icon" href="images/Group 11.png">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        #root {
+            background-color: #151515;
+            width: 100%;
+        }
+
+        #content-title {
+            color: white;
+        }
+
+        #content {
+            width: 100%;
+            margin: 0 auto;
+        }
+
+        .header-top {
+            width: 100%;
+            height: auto;
+            display: flex;
+            align-items: center;
+            padding: 1.5rem 0;
+            margin: 0 auto;
+            justify-content: space-between;
+            background-color: rgb(21, 21, 21);
+            position: relative;
+            z-index: 2;
+        }
+        ul{
+            list-style-type: none;   
+        }
+        ul li a{
+            text-decoration: none;
+            color: white;
+            font-family: "Noto Sans", sans-serif;
+            font-weight: 500;
+            font-size: 28px;
+        }
+        .findText{
+            color: #BDBDBD;
+        }
+
+    </style>
 </head>
+
 <body>
     <div id="root">
         <div class="header-top">
-            <img src="" alt="logo" class="pageLogo">
-            ul>li 
+            <img src="images/logo_Text.png" alt="textLogo" class="pageLogo">
+            <ul>
+                <li><a href="">Project</a></li>
+                <li><a href="">Announcement</a></li>
+                <li><a href="">Archive</a></li>
+            </ul>
+            <button id="login-btn">Login</button>
+        </div>
+        <div id="content">
+            <img src="images/Group 10.png" alt="iconLogo" class="pageIcon">
+            <h3 id="content-title">Login</h3>
+            <input type="text" name="userId" id="inputId">
+            <input type="password" name="userPwd" id="inputPwd">
+            <a href="" class="findText">아이디찾기</a>
+            <a href="" class="findText">비밀번호 찾기</a>
+            <button id="content-login-btn">로그인</button>
+            <button id="content-member-btn">회원가입하기</button>
         </div>
     </div>
 </body>
