랜디페이지 메뉴 글자 정렬 수정

--- a/윤서보경팀/3차과제/윤서/project/loginPage.html
+++ b/윤서보경팀/3차과제/윤서/project/loginPage.html
@@ -8,69 +8,7 @@
     <link rel="icon" href="images/Group 11.png">
     <link href="loginPage.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        /*
-        #root {
-            background-color: #151515;
-            width: 100%;
-        }
-
-        #content-title {
-            color: white;
-            font-size: 44px;
-            font-weight: 500;
-            text-align: center;
-        }
-
-        #content {
-            width: 100%;
-            margin: 0 auto;
-        }
-
-        .header-top {
-            width: 100%;
-            height: auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: rgb(21, 21, 21);
-        }
-        ul{
-            list-style-type: none;   
-        }
-        ul li a{
-            text-decoration: none;
-            color: white;
-            font-family: "Noto Sans", sans-serif;
-            font-weight: 500;
-            font-size: 28px;
-        }
-        .findText{
-            color: #BDBDBD;
-        }
-        input{
-            background-color: #212121;
-            height: 45px;
-            width: 30%;
-            border-style: none;
-        }
-        #content-login-btn{
-            height: 45px;
-            background-color: #E32929;
-            width: 30.4%;
-            border-style: none;
-        }
-        #content-member-btn{
-            height: 45px;
-            width: 30.4%;
-            border-style: none;
-        }
-        .pageIcon{
-            align-items: center;
-            justify-content: center;
-        }
-            */
-    </style>
+    
 </head>
 
 <body>
@@ -83,7 +21,7 @@
                 <li><a href="">Announcement</a></li>
                 <li><a href="">Archive</a></li>
             </ul>
-            <button id="login-btn">Login</button>
+            <button id="login-btn" href="loginPage.html">Login</button>
         </div>
         <div id="content">
             <img src="images/Group 10.png" alt="iconLogo" class="pageIcon">
