--- a/윤서보경팀/3차과제/윤서/project/loginPage_findId.html
+++ b/윤서보경팀/3차과제/윤서/project/loginPage_findId.html
@@ -25,7 +25,27 @@
         </div>
         <div id="content">
             <h3 id="title">아이디 찾기</h3>
-            
+        </div>
+        <div class="content-area">
+            <ul id="list-1">
+                <li>회원 정보</li>
+                <li>이름</li>
+                <li>생년월일</li>
+                <li>성별</li>
+            </ul>
+            <ul id="list-2">
+                <li><input type="text" name="" id=""placeholder="홍길동"></li>
+                <li><input type="tel" name="" id=""placeholder="2000.01.01"></li>
+                <li><button>남성</button><button>여성</button></li>
+            </ul>
+            <ul id="list-3">
+                <li>휴대전화 번호</li>
+                <li>이메일</li>
+            </ul>
+            <ul id="list-4">
+                <li><input type="tel" name="" id="" placeholder="010-1234-5678"></li>
+                <li><input type="email" name="" id="" placeholder="sequence@email.com"></li>
+            </ul>
         </div>
     </div>
     <script>
