아이디찾기, 비밀번호 찾기 수정중

--- a/윤서보경팀/3차과제/윤서/project/loginPage.html
+++ b/윤서보경팀/3차과제/윤서/project/loginPage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sequence</title>
     <link rel="icon" href="images/Group 11.png">
-    <!--<link href="loginPage.css" rel="stylesheet">-->
+    <link href="loginPage.css" rel="stylesheet">
     <link href="updated_loginPage.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 
