--- a/윤서보경팀/3차과제/윤서/project/clickLogin.html
+++ b/윤서보경팀/3차과제/윤서/project/clickLogin.html
@@ -83,7 +83,8 @@
 
         .result-box {
             border: 1px solid #757575;
-            width: 300px;
+            width: 254px;
+            height: 130px;
             margin: 0px auto 140px;
             padding: 20px;
             text-align: center;
@@ -94,6 +95,7 @@
 
         .result-box p {
             margin: 10px 0;
+            color: #9E9E9E;
         }
 
         .result-box strong {
@@ -114,7 +116,6 @@
             font-size: 18px;
             font-weight: 600;
             cursor: pointer;
-            border-radius: 5px;
             transition: all 0.3s ease;
         }
 
