--- a/윤서보경팀/3차과제/윤서/project/idFind.html
+++ b/윤서보경팀/3차과제/윤서/project/idFind.html
@@ -110,7 +110,7 @@
             border-bottom: 1px solid #616161;
             background: none;
             font-size: 18px;
-            color: #9E9E9E;
+            color: #F5F5F5;
             outline: none;
         }
 
@@ -175,6 +175,9 @@
         .inactive:hover {
             background-color: #212121;
             color: #616161;
+        }
+        input ::placeholder{
+            color: #9E9E9E;
         }
     </style>
 </head>
