아이디 찾기, 비밀번호 찾기, loginPage에 연결

--- a/윤서보경팀/20241126/윤서/project/loginPage.html
+++ b/윤서보경팀/20241126/윤서/project/loginPage.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sequence</title>
     <link rel="icon" href="images/Group 11.png">
-    <!--<link href="loginPage.css" rel="stylesheet">-->
-    <link href="updated_loginPage.css" rel="stylesheet">
+    <link href="loginPage.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
@@ -32,8 +31,8 @@
             <input type="password" name="userPwd" id="inputPwd" id="displayPwd" placeholder="비밀번호를 입력해주세요">
             <input type="hidden" id="realPwd">
             <div id="findSet">
-                <a href="" class="findText-id">아이디찾기 ></a>
-                <a href="" class="findText-pwd">비밀번호 찾기 ></a>
+                <a href="id.html" class="findText-id">아이디찾기 ></a>
+                <a href="password.html" class="findText-pwd">비밀번호 찾기 ></a>
             </div>
             <div id="btns">
                 <button id="content-login-btn" onClick="loginButton();">로그인</button>
