--- a/윤서보경팀/20241126/윤서/project/id.html
+++ b/윤서보경팀/20241126/윤서/project/id.html
@@ -121,13 +121,24 @@
             margin-top: 240px;
         }
 
-        button#gender {
+        .gender-btn {
             width: 60px;
             height: 40px;
+            border: 1px solid #616161;
+            color: #616161;
+            background-color: transparent;
+            transition: all 0.3s ease;
+            border-radius: 100px;
+        }
+
+        .gender-btn.selected {
             border: 1px solid #fafafa;
             color: white;
-            background-color: transparent;
-            border-radius: 100px;
+        }
+
+        .gender-btn:not(.selected) {
+            border: 1px solid #616161;
+            color: #616161;
         }
 
         #find-id-btn {
@@ -139,6 +150,7 @@
             font-size: 28px;
             font-weight: 700;
             cursor: pointer;
+            margin-bottom: 250px;
         }
 
         #find-id-btn.active {
@@ -176,8 +188,10 @@
                 </div>
                 <div class="input-group">
                     <label for="gender">성별</label>
-                    <button onclick="" id="gender">남성</button>
-                    <button onclick="" id="gender">여성</button>
+                    <button type="button" id="male-btn" class="gender-btn selected"
+                        onclick="selectGender('male')">남성</button>
+                    <button type="button" id="female-btn" class="gender-btn"
+                        onclick="selectGender('female')">여성</button>
                 </div>
             </div>
             <div class="main-grid-1">
@@ -207,6 +221,24 @@
         function toclickpage() {
             window.location.href = "idDone.html";
         }
+        document.addEventListener("DOMContentLoaded", () => {
+            selectGender('male'); // 페이지 로드 시 "남성" 버튼 기본 선택
+        });
+
+        function selectGender(gender) {
+            const maleBtn = document.getElementById("male-btn");
+            const femaleBtn = document.getElementById("female-btn");
+
+            if (gender === "male") {
+                maleBtn.classList.add("selected");
+                femaleBtn.classList.remove("selected");
+            } else {
+                femaleBtn.classList.add("selected");
+                maleBtn.classList.remove("selected");
+            }
+
+            checkInputs(); // 성별 선택 후 버튼 활성화 체크
+        }
 
         document.addEventListener("DOMContentLoaded", () => {
             const nameInput = document.getElementById("name");
@@ -214,13 +246,27 @@
             const phoneInput = document.getElementById("tel");
             const emailInput = document.getElementById("email");
             const findIdBtn = document.getElementById("find-id-btn");
+            const genderButtons = document.querySelectorAll(".gender-btn");
+            let selectedGender = "";
+
+            genderButtons.forEach(button => {
+                button.addEventListener("click", () => {
+                    genderButtons.forEach(btn => btn.classList.remove("selected"));
+                    button.classList.add("selected");
+                    selectedGender = button.dataset.gender;
+                    checkInputs();
+                });
+            });
 
             function checkInputs() {
+                const isGenderSelected = selectedGender !== "";
+
                 if (
                     nameInput.value.trim() !== "" &&
                     birthInput.value.trim() !== "" &&
                     phoneInput.value.trim() !== "" &&
-                    emailInput.value.trim() !== ""
+                    emailInput.value.trim() !== "" &&
+                    isGenderSelected
                 ) {
                     findIdBtn.classList.add("active");
                     findIdBtn.removeAttribute("disabled");
